--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,18 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.12.110</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-core</artifactId>
+			<version>1.12.110</version>
+			<scope>compile</scope>
+		</dependency>
         </dependencies>
     </dependencyManagement>
 
